kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-app
  namespace: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-app
  template:
    metadata:
      labels:
        app: kube-app
    spec:
      containers:
      - name: kube-container
        image: nginx:latest
        ports:
        - containerPort: 80
        readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 100
        volumeMounts:
          - name: data-volume
            mountPath: /homework
          - name: config-nginx
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf 
          - name: config-text-file
            mountPath: /homework/conf     
      volumes:
      - name: config-nginx
        configMap:
          name: nginx-config
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: config-text-file
        configMap:
          name: config-text-file
          items:
            - key: test.txt
              path: test.txt
      - name: data-volume
        persistentVolumeClaim:
          claimName: app-pvc
