kubernetes-volumes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: homework
spec:
  type: NodePort
  selector:
    app: kube-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
