kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: homework
  # annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: example-service
            port:
              number: 80
